[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
description = "A simple cli clipboard to simplify file operations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["cargo", "derive"] }
prettytable-rs = "0.9.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sscanf = "0.3.1"

